--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,27 @@
 body {
   font-family: Roboto, sans-serif;
   color: #434455;
+  background-color: #ffffff;
 }
 /* Header */
 .logo {
   color: #4d5ae5;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  line-height: 116.667%;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
 }
 .logo-studio {
   color: #2e2f42;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  line-height: 116.667%;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
@@ -40,22 +41,27 @@ body {
   color: #404bbf;
 }
 .header-address {
+  font-style: normal;
+}
+.address {
   color: #434455;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: 150%;
   letter-spacing: 0.32px;
 }
-.header-address:hover {
+.address:hover {
+  color: #404bbf;
+}
+.address:focus {
   color: #404bbf;
 }
 
 /* main */
-.section-1 {
+.section-one {
   background: #2e2f42;
 }
-.h1 {
+.h-one {
   color: #fff;
   text-align: center;
   font-size: 56px;
@@ -71,15 +77,16 @@ body {
   font-weight: 500;
   line-height: 150%;
   letter-spacing: 0.64px;
-  border-radius: 4px;
   background: #4d5ae5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
 .button:hover {
   background: #404bbf;
 }
-.section-2-h3 {
+.button:focus {
+  background: #404bbf;
+}
+.section-two-h-three {
   color: #2e2f42;
   font-size: 20px;
   font-style: normal;
@@ -87,16 +94,16 @@ body {
   line-height: 120%;
   letter-spacing: 0.4px;
 }
-.section-2-p {
+.section-two-p {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.32px;
 }
 
-.section-3 {
+.section-three {
   background: #f4f4fd;
 }
-.section-3-h2 {
+.section-three-h-two {
   color: #2e2f42;
   text-align: center;
   font-size: 36px;
@@ -106,14 +113,10 @@ body {
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
-.section-3-li {
-  border-radius: 0px 0px 4px 4px;
+.section-three-li {
   background: var(--WHITE, #fff);
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
-.section-3-h3 {
+.section-three-h-three {
   color: #2e2f42;
   text-align: center;
   font-size: 20px;
@@ -122,14 +125,14 @@ body {
   line-height: 120%;
   letter-spacing: 0.4px;
 }
-.section-3-p {
+.section-three-p {
   color: #434455;
   text-align: center;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.32px;
 }
-.section-4-h2 {
+.section-four-h-two {
   color: #2e2f42;
   text-align: center;
   font-size: 36px;
@@ -139,11 +142,11 @@ body {
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
-.section-4-li {
+.section-four-li {
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
   background: var(--WHITE, #fff);
 }
-.section-4-h3 {
+.section-four-h-three {
   color: #2e2f42;
   font-size: 20px;
   font-style: normal;
@@ -151,7 +154,7 @@ body {
   line-height: 120%;
   letter-spacing: 0.4px;
 }
-.section-4-p {
+.section-four-p {
   color: #434455;
   font-size: 16px;
   line-height: 150%;
@@ -163,22 +166,22 @@ body {
 }
 .logo-footer {
   color: #4d5ae5;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  line-height: 116.667%;
+  line-height: 117%;
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
 }
 .logo-studio-footer {
   color: #f4f4fd;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  line-height: 116.667%;
+  line-height: 117%;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
