--- a/css/styles.css
+++ b/css/styles.css
@@ -65,10 +65,10 @@ ul {
 }
 
 /* main */
-.section-one {
+.section-background {
   background: #2e2f42;
 }
-.h-one {
+.title-first {
   color: #fff;
   text-align: center;
   font-size: 56px;
@@ -93,7 +93,7 @@ ul {
 .button:focus {
   background: #404bbf;
 }
-.section-two-h-three {
+.advantages-title-item {
   color: #2e2f42;
   font-size: 20px;
   font-style: normal;
@@ -101,16 +101,16 @@ ul {
   line-height: 120%;
   letter-spacing: 0.4px;
 }
-.section-two-p {
+.advantages-paragraph-item {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.32px;
 }
 
-.section-three {
+.background-our-team {
   background: #f4f4fd;
 }
-.section-three-h-two {
+.title-our-team {
   color: #2e2f42;
   text-align: center;
   font-size: 36px;
@@ -120,10 +120,10 @@ ul {
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
-.section-three-li {
+.our-team-items-list {
   background: var(--WHITE, #fff);
 }
-.section-three-h-three {
+.our-team-title {
   color: #2e2f42;
   text-align: center;
   font-size: 20px;
@@ -132,14 +132,14 @@ ul {
   line-height: 120%;
   letter-spacing: 0.4px;
 }
-.section-three-p {
+.our-team-paragraph {
   color: #434455;
   text-align: center;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.32px;
 }
-.section-four-h-two {
+.portfolio-title {
   color: #2e2f42;
   text-align: center;
   font-size: 36px;
@@ -149,10 +149,10 @@ ul {
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
-.section-four-li {
+.portfolio-list {
   background: var(--WHITE, #fff);
 }
-.section-four-h-three {
+.portfolio-title-list-item {
   color: #2e2f42;
   font-size: 20px;
   font-style: normal;
@@ -160,7 +160,7 @@ ul {
   line-height: 120%;
   letter-spacing: 0.4px;
 }
-.section-four-p {
+.portfolio-paragraph {
   color: #434455;
   font-size: 16px;
   line-height: 150%;
@@ -191,7 +191,7 @@ ul {
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
-.footer-p {
+.footer-paragraph {
   color: #f4f4fd;
   font-size: 16px;
   line-height: 150%;
