--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: Roboto, sans-serif;
+  font-style: normal;
   color: #434455;
   background-color: #ffffff;
 }
@@ -10,163 +11,154 @@ a {
 ul {
   list-style: none;
 }
+
 /* Header */
 .logo {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
-  font-style: normal;
   font-weight: 700;
   line-height: 1.17;
-  letter-spacing: 0.54px;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-decoration: none;
 }
-.logo-studio {
+.logo-span {
   color: #2e2f42;
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
-  text-decoration: none;
 }
-.nav-header {
+.nav-adress {
   color: #2e2f42;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 150%;
-  letter-spacing: 0.32px;
+  line-height: 1.5em;
+  letter-spacing: 0.02em;
 }
-.nav-header:hover {
-  color: #404bbf;
-}
-.nav-header-studio:focus {
-  color: #404bbf;
-}
-.header-address {
-  font-style: normal;
-}
-.address {
-  color: #434455;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 150%;
-  letter-spacing: 0.32px;
-}
-.address:hover {
-  color: #404bbf;
-}
-.address:focus {
+.nav-adress:hover,
+:focus {
   color: #404bbf;
 }
 
-/* main */
-.section-background {
+.address {
+  font-style: normal;
+}
+.list-address {
+  color: #434455;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5em;
+  letter-spacing: 0.02em;
+}
+.list-address:hover,
+:focus {
+  color: #404bbf;
+}
+
+/* MAIN */
+
+/* Section 1 */
+
+.effective-solutions-background {
   background: #2e2f42;
 }
 .title-first {
   color: #fff;
   text-align: center;
   font-size: 56px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 107.143%;
-  letter-spacing: 1.12px;
+  line-height: 1.07em;
+  letter-spacing: 0.02em;
 }
 .button {
   color: #fff;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 150%;
-  letter-spacing: 0.64px;
+  line-height: 1.5em;
+  letter-spacing: 0.04em;
   background: #4d5ae5;
   cursor: pointer;
 }
-.button:hover {
+.button:hover,
+:focus {
   background: #404bbf;
-}
-.button:focus {
-  background: #404bbf;
-}
-.advantages-title-item {
-  color: #2e2f42;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 120%;
-  letter-spacing: 0.4px;
-}
-.advantages-paragraph-item {
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.32px;
 }
 
-.background-our-team {
+/* Section 2 */
+
+.advantages-list-title {
+  color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2em;
+  letter-spacing: 0.02em;
+}
+.advantages-list-paragraph {
+  font-size: 16px;
+  line-height: 1.5em;
+  letter-spacing: 0.02em;
+}
+
+/* Section 3 */
+
+.background-team {
   background: #f4f4fd;
 }
-.title-our-team {
+.team {
   color: #2e2f42;
   text-align: center;
   font-size: 36px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 111.111%;
-  letter-spacing: 0.72px;
+  line-height: 1.11em;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
 }
-.our-team-items-list {
+.team-list {
   background: var(--WHITE, #fff);
 }
-.our-team-title {
+.team-list-title {
   color: #2e2f42;
   text-align: center;
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 120%;
-  letter-spacing: 0.4px;
+  line-height: 1.2em;
+  letter-spacing: 0.02em;
 }
-.our-team-paragraph {
+.team-list-paragraph {
   color: #434455;
   text-align: center;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.32px;
+  line-height: 1.5em;
+  letter-spacing: 0.02em;
 }
-.portfolio-title {
+
+/* Section 4 */
+
+.portfolio {
   color: #2e2f42;
   text-align: center;
   font-size: 36px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 111.111%;
-  letter-spacing: 0.72px;
+  line-height: 1.11em;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
 }
 .portfolio-list {
   background: var(--WHITE, #fff);
 }
-.portfolio-title-list-item {
+.portfolio-list-title {
   color: #2e2f42;
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 120%;
-  letter-spacing: 0.4px;
+  line-height: 1.2em;
+  letter-spacing: 0.02em;
 }
-.portfolio-paragraph {
+.portfolio-list-paragraph {
   color: #434455;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.32px;
+  line-height: 1.5em;
+  letter-spacing: 0.02em;
 }
-/* footer */
+
+/* FOOTER */
+
 .footer {
   background: #2e2f42;
 }
@@ -181,7 +173,7 @@ ul {
   text-transform: uppercase;
   text-decoration: none;
 }
-.logo-studio-footer {
+.logo-span-footer {
   color: #f4f4fd;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
